src/App.css
.App {
  background: url('fourseasons.jpg') center/contain no-repeat;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
}

.clock {
  height: 98vmin;
  width: 98vmin;
  text-align: center;
  position: relative;
}

.dot { 
  position: absolute;
  top: 50%;
  right: 50%;
  margin-right: -15px;
  margin-top: -15px;
  background-color: white;
  width: 30px;
  height: 30px;
  border-radius: 50% 50%;
}

.arm {
  position: absolute;
  top: 50%;
  right: 50%;
  margin-right: -15px;
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 50vmin solid white;
  transform-origin: top center;
}

.month {
  color: white;
  -webkit-text-stroke: 1px black;
  font-size: 1.1em;
  font-weight: 900;
  text-transform: uppercase;
  position: absolute;
  width: 100%;
  top: 50%;
}
.January {
  transform: translateY(-48vmin);
}
.February {
  transform: rotate(30deg) translateY(-48vmin);
}
.March {
  transform: rotate(60deg) translateY(-48vmin);
}
.April {
  transform: rotate(90deg) translateY(-48vmin);
}
.May {
  transform: rotate(120deg) translateY(-47vmin) rotate(180deg);
}
.June {
  transform: rotate(150deg) translateY(-46vmin) rotate(180deg);
}
.July {
  transform: rotate(180deg) translateY(-46vmin) rotate(180deg);
}
.August {
  transform: rotate(210deg) translateY(-46vmin) rotate(180deg);
}
.September {
  transform: rotate(240deg) translateY(-47vmin) rotate(180deg);
}
.October {
  transform: rotate(270deg) translateY(-47vmin);
}
.November {
  transform: rotate(300deg) translateY(-48vmin);
}
.December {
  transform: rotate(330deg) translateY(-48vmin);
}

